--- a/NewCarRental/Views/Cars/Index.cshtml
+++ b/NewCarRental/Views/Cars/Index.cshtml
@@ -1,14 +1,19 @@
 ﻿@model IEnumerable<NewCarRental.Models.DAL.Cars>
 
+
 @{
     ViewBag.Title = "Cars";
 }
 
 <h2>@ViewBag.Title</h2>
 
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
+@if (User.Identity.IsAuthenticated)
+{
+    <p>
+        @Html.ActionLink("Create New", "Create")
+    </p>
+}
+
 <table class="table">
     <tr>
         <th>
@@ -32,7 +37,8 @@
         <th></th>
     </tr>
 
-@foreach (var item in Model) {
+    @foreach (var item in Model)
+    {
     <tr>
         <td>
             @Html.DisplayFor(modelItem => item.Name)
@@ -52,12 +58,22 @@
         <td>
             @Html.DisplayFor(modelItem => item.CarType.Type)
         </td>
+
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.Id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.Id })
+            
+            @Html.ActionLink("Details", "Details", new { id = item.Id }) 
+           
         </td>
+
+        @if (User.Identity.IsAuthenticated)
+        {
+            <td>
+                @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
+                @Html.ActionLink("Delete", "Delete", new { id = item.Id })
+            </td>
+        }
+
     </tr>
-}
+    }
 
 </table>
