--- a/NewCarRental/Views/Reservations/Index.cshtml
+++ b/NewCarRental/Views/Reservations/Index.cshtml
@@ -5,47 +5,67 @@
 }
 
 <h2>@ViewBag.Title</h2>
+<div class="col-md-6">
 
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.DateFrom)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.DateTo)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Cars.Name)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Customers.Name)
-        </th>
-        <th></th>
-    </tr>
+    <p>
+        To rent a car, you must register your account.
+    </p>
+    <p><a class="btn btn-default" href="/Customers/Create">Registration &raquo;</a></p>
+</div>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.DateFrom)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.DateTo)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Cars.Name)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Customers.Name)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.Id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.Id })
-        </td>
-    </tr>
+
+<div class="col-md-6">
+
+    <p>
+        If you are logged in - create new reservation
+    </p>
+    <p><a class="btn btn-default" href="/Reservations/Create">Create &raquo;</a></p>
+
+
+</div>
+
+
+@*@if (User.Identity.IsAuthenticated)
+{*@
+    <table class="table">
+        <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.DateFrom)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.DateTo)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Cars.Name)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Customers.Name)
+            </th>
+            <th></th>
+        </tr>
+
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.DateFrom)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.DateTo)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Cars.Name)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Customers.Name)
+                </td>
+                <td>
+                    @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
+                    @Html.ActionLink("Details", "Details", new { id = item.Id }) |
+                    @Html.ActionLink("Delete", "Delete", new { id = item.Id })
+                </td>
+            </tr>
+        @*  *@}
+
+    </table>
 }
-
-</table>
