--- a/NewCarRental/Views/Shared/_Layout.cshtml
+++ b/NewCarRental/Views/Shared/_Layout.cshtml
@@ -13,6 +13,7 @@
     @Html.Partial("_NavBar")
 
     <div class="container body-content">
+        <img src="/Content/Images/slider0.jpg" height="200px" width="100%" />
         @RenderBody()
         <hr />
         <footer>
