--- a/NewCarRental/Views/Shared/_LoginPartial.cshtml
+++ b/NewCarRental/Views/Shared/_LoginPartial.cshtml
@@ -28,6 +28,6 @@ else
         }
 
         @*<li>@Html.ActionLink("Register", "Register", "Account", routeValues: null, htmlAttributes: new { id = "registerLink" })</li>*@
-        @*<li>@Html.ActionLink("Log in", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" })</li>*@
+        <li>@Html.ActionLink("Admin", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" })</li>
     </ul>
 }
