--- a/NewCarRental/Views/Reservations/Index.cshtml
+++ b/NewCarRental/Views/Reservations/Index.cshtml
@@ -16,11 +16,15 @@
 
 <div class="col-md-6">
 
-    <p>
-        If you are logged in - create new reservation
-    </p>
 
-    <p><a class="btn btn-default" href="/Reservations/Create">Create &raquo;</a></p>
+    @if (NewCarRental.Helpers.UserHelper.User != null)
+    {
+        <p>
+            If you are logged in - create new reservation
+        </p>
+        <p><a class="btn btn-default" href="/Reservations/Create">Create &raquo;</a></p>
+    }
+
 
 
 </div>
@@ -69,4 +73,4 @@
         @*  *@}
 
     </table>
-}
+
