--- a/NewCarRental/Views/Shared/_NavBar.cshtml
+++ b/NewCarRental/Views/Shared/_NavBar.cshtml
@@ -19,6 +19,9 @@
                 {
                     <li>@Html.ActionLink("Customers", "Index", "Customers")</li>
                     <li>@Html.ActionLink("CarTypes", "Index", "CarTypes")</li>
+                    <li>
+                        @Html.ActionLink("Register new authenticated user", "Register", "Account")
+                    </li>
                 }
 
             </ul>
